--- a/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
+++ b/client/src/Components/common/AlgaehmainPage/AlgaehmainPage.css
@@ -25,17 +25,11 @@ header {
   .sideMenuBars:hover {
     background: #00999c; }
 
-.navTopBarRight {
-  float: right; }
-  .navTopBarRight div,
-  .navTopBarRight button {
-    display: inline-block; }
-
 .topNavbar-title {
   font-size: 1.2rem;
   margin: 0;
   padding: 0;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.3); }
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2); }
 
 .appLogoCntr {
   width: 115px;
@@ -93,30 +87,24 @@ header {
   animation-duration: 0.4s; }
 
 /* Light Side Bar Menu */
-/*
-Code snippet by maridlcrmn for Bootsnipp.com
-Follow me on Twitter @maridlcrmn
-*/
-/* Dark Side Bar Menu */
 .hptl-phase1-sideMenuBar .sideMenu-header {
-  color: white;
-  background: #292929;
+  color: #212529;
+  background: #f7f7f7;
   padding-top: 50px; }
 
 .hptl-phase1-sideMenuBar .side-menu-title {
   padding: 5px 0;
   line-height: 35px;
-  border-bottom: 2px solid #000000;
-  border-top: 1px solid #505050;
+  border-bottom: 2px solid #d2d2d2;
+  border-top: 1px solid #fff;
   cursor: pointer;
   font-size: 0.9rem; }
   .hptl-phase1-sideMenuBar .side-menu-title i {
-    text-shadow: 0px 2px 0px #000; }
+    text-shadow: 0px 2px 0px #fff; }
 
 .hptl-phase1-sideMenuBar .side-menu-title:hover {
-  background: #00bcb0; }
-  .hptl-phase1-sideMenuBar .side-menu-title:hover i {
-    text-shadow: 0px 2px 0px #000; }
+  background: #fff;
+  color: #00bcb0; }
 
 .hptl-phase1-sideMenuBar .side-menu-arrow {
   margin-top: 5px; }
@@ -137,25 +125,23 @@ Follow me on Twitter @maridlcrmn
     border-bottom: 1px dotted #4e4e4e;
     text-transform: uppercase;
     cursor: pointer;
-    color: #dcac66;
-    line-height: 20px; }
+    line-height: 20px;
+    background: #7b7b7b;
+    color: #fff; }
     .hptl-phase1-sideMenuBar ul.tree-structure-menu li i {
-      margin-right: 12px;
-      margin-left: 14px;
+      margin-right: 27px;
+      margin-left: 12px;
       display: inline-block;
       vertical-align: initial; }
     .hptl-phase1-sideMenuBar ul.tree-structure-menu li span {
       display: inline-block;
-      width: 80%; }
+      width: 78%; }
   .hptl-phase1-sideMenuBar ul.tree-structure-menu li:hover {
-    background: #00bcb0;
-    color: #fff; }
+    background: #fff;
+    color: #00bcb0; }
   .hptl-phase1-sideMenuBar ul.tree-structure-menu li.active {
     background: #00bcb0;
     color: #fff; }
-
-.hptl-phase1-sideMenuBar .sub-menu-option {
-  background: #000000; }
 
 .hptl-phase1-sideMenuBar .close-menu {
   padding-top: 5px;
@@ -164,12 +150,14 @@ Follow me on Twitter @maridlcrmn
 
 .hptl-phase1-sideMenuBar .menuBar-title {
   display: flex;
+  padding: 5px;
   font-size: 20px;
-  height: 49px;
+  height: 52px;
   background: #000;
   position: fixed;
   width: 255px;
-  z-index: 9; }
+  z-index: 9;
+  border-bottom: 1px solid #3e3e3e; }
 
 .hptl-phase1-sideMenuBar .sideBarClose {
   position: absolute;
@@ -185,6 +173,107 @@ Follow me on Twitter @maridlcrmn
 .hptl-phase1-sideMenuBar svg {
   height: 23px; }
 
+/* Dark Side Bar Menu 
+.hptl-phase1-sideMenuBar {
+  .sideMenu-header {
+    color: white;
+    background: #292929;
+    padding-top: 50px;
+  }
+  .side-menu-title {
+    padding: 5px 0;
+    line-height: 35px;
+    border-bottom: 2px solid #000000;
+    border-top: 1px solid #505050;
+    cursor: pointer;
+    font-size: 0.9rem;
+    i {
+      text-shadow: 0px 2px 0px #000;
+    }
+  }
+  .side-menu-title:hover {
+    background: rgb(0, 188, 176);
+    i {
+      text-shadow: 0px 2px 0px #000;
+    }
+  }
+  .side-menu-arrow {
+    margin-top: 5px;
+  }
+  .side-menu-downIcon {
+    padding-top: 5px;
+    padding-right: 5px;
+    cursor: pointer;
+  }
+  ul.tree-structure-menu {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    li {
+      padding: 8px 5px;
+      margin: 0;
+      font-size: 0.8rem;
+      border-bottom: 1px dotted #4e4e4e;
+      text-transform: uppercase;
+      cursor: pointer;
+      color: #dcac66;
+      line-height: 20px;
+      i {
+        margin-right: 12px;
+        margin-left: 14px;
+        display: inline-block;
+        vertical-align: initial;
+      }
+      span {
+        display: inline-block;
+        width: 80%;
+      }
+    }
+    li:hover {
+      background: rgb(0, 188, 176);
+      color: #fff;
+    }
+
+    li.active {
+      background: rgb(0, 188, 176);
+      color: #fff;
+    }
+  }
+  .sub-menu-option {
+    background: #000000;
+  }
+
+  .close-menu {
+    padding-top: 5px;
+    cursor: pointer;
+    color: #fff;
+  }
+
+  .menuBar-title {
+    display: flex;
+    font-size: 20px;
+    height: 49px;
+    background: #000;
+    position: fixed;
+    width: 255px;
+    z-index: 9;
+  }
+  .sideBarClose {
+    position: absolute;
+    right: 19px;
+    top: 14px;
+    color: #fff;
+    font-size: 1.3rem;
+  }
+  .sideBarClose:hover {
+    color: #00bcb0;
+    cursor: pointer;
+  }
+  svg {
+    height: 23px;
+  }
+}
+*/
 .hptl-phase1-footer .main {
   background-color: #000000 !important;
   border-top: 1px solid #0000;
@@ -233,9 +322,34 @@ Follow me on Twitter @maridlcrmn
   padding: 0px 3px;
   border-radius: 2px; }
 
+.navTopbar-dropdown {
+  padding: 15px;
+  border-left: 1px solid #009c9e;
+  margin: 0;
+  margin-right: -15px;
+  cursor: pointer; }
+  .navTopbar-dropdown .dropdown-menu {
+    left: inherit;
+    right: -1px;
+    display: none;
+    border-radius: 0 0 5px 5px;
+    top: 51px;
+    width: 200px; }
+    .navTopbar-dropdown .dropdown-menu .dropdown-item {
+      padding: 0.5rem 0.8rem;
+      color: #686868; }
+      .navTopbar-dropdown .dropdown-menu .dropdown-item i {
+        margin-right: 0.5rem; }
+      .navTopbar-dropdown .dropdown-menu .dropdown-item:hover {
+        color: #00999c; }
+  .navTopbar-dropdown:hover {
+    background: #00999c; }
+    .navTopbar-dropdown:hover .dropdown-menu {
+      display: block; }
+
 .loginProfileInfo {
   font-size: 0.8rem;
-  margin-top: 4px; }
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1); }
   .loginProfileInfo span {
     display: block;
     white-space: nowrap;
