--- a/client/src/Components/DoctorsWorkbench/doctor_workbench.css
+++ b/client/src/Components/DoctorsWorkbench/doctor_workbench.css
@@ -8,14 +8,41 @@
   margin-right: 15px; }
   .clinicalDeskScreen .cldrPatientList .cldrSection {
     background: #cccccc;
-    height: 200px; }
+    height: 289px; }
+    .clinicalDeskScreen .cldrPatientList .cldrSection .react-datepicker {
+      width: 100%;
+      border: none;
+      border-radius: 0; }
+      .clinicalDeskScreen .cldrPatientList .cldrSection .react-datepicker .react-datepicker__month-container {
+        width: 100%; }
+        .clinicalDeskScreen .cldrPatientList .cldrSection .react-datepicker .react-datepicker__month-container .react-datepicker__current-month,
+        .clinicalDeskScreen .cldrPatientList .cldrSection .react-datepicker .react-datepicker__month-container .react-datepicker-time__header {
+          display: none; }
+        .clinicalDeskScreen .cldrPatientList .cldrSection .react-datepicker .react-datepicker__month-container .react-datepicker__header {
+          border-radius: 0; }
+        .clinicalDeskScreen .cldrPatientList .cldrSection .react-datepicker .react-datepicker__month-container .react-datepicker__day-name,
+        .clinicalDeskScreen .cldrPatientList .cldrSection .react-datepicker .react-datepicker__month-container .react-datepicker__day,
+        .clinicalDeskScreen .cldrPatientList .cldrSection .react-datepicker .react-datepicker__month-container .react-datepicker__time-name {
+          margin: 0.1666rem 0.35rem; }
+        .clinicalDeskScreen .cldrPatientList .cldrSection .react-datepicker .react-datepicker__month-container .react-datepicker__day--selected,
+        .clinicalDeskScreen .cldrPatientList .cldrSection .react-datepicker .react-datepicker__month-container .react-datepicker__day--in-selecting-range,
+        .clinicalDeskScreen .cldrPatientList .cldrSection .react-datepicker .react-datepicker__month-container .react-datepicker__day--in-range {
+          background-color: #34b8bc; }
+        .clinicalDeskScreen .cldrPatientList .cldrSection .react-datepicker .react-datepicker__month-container .react-datepicker__month-select,
+        .clinicalDeskScreen .cldrPatientList .cldrSection .react-datepicker .react-datepicker__month-container .react-datepicker__year-select {
+          -webkit-appearance: none;
+          padding: 3px 6px;
+          border: none; }
+  .clinicalDeskScreen .cldrPatientList .viewAllApp {
+    box-shadow: -6px 6px 10px rgba(0, 0, 0, 0.07);
+    padding-bottom: 15px; }
   .clinicalDeskScreen .cldrPatientList .newPatientSec .appPatientList .appPatientListCntr {
     margin: 0;
     padding: 0;
     list-style: none;
-    max-height: 60vh;
     overflow-y: auto;
-    overflow-x: hidden; }
+    overflow-x: hidden;
+    height: calc(100vh - 407px); }
     .clinicalDeskScreen .cldrPatientList .newPatientSec .appPatientList .appPatientListCntr .appSection {
       border-top: 1px solid #cccccc;
       border-bottom: 1px solid #cccccc;
