--- a/client/src/Components/DoctorsWorkbench/doctor_workbench.scss
+++ b/client/src/Components/DoctorsWorkbench/doctor_workbench.scss
@@ -11,18 +11,54 @@
     margin-right: 15px;
     .cldrSection {
       background: lighten($color-black, 80%);
-      height: 200px;
-    }
+      height: 289px;
 
+      .react-datepicker {
+        width: 100%;
+        border: none;
+        border-radius: 0;
+        .react-datepicker__month-container {
+          width: 100%;
+          .react-datepicker__current-month,
+          .react-datepicker-time__header {
+            display: none;
+          }
+          .react-datepicker__header {
+            border-radius: 0;
+          }
+
+          .react-datepicker__day-name,
+          .react-datepicker__day,
+          .react-datepicker__time-name {
+            margin: 0.1666rem 0.35rem;
+          }
+          .react-datepicker__day--selected,
+          .react-datepicker__day--in-selecting-range,
+          .react-datepicker__day--in-range {
+            background-color: $primary-color;
+          }
+          .react-datepicker__month-select,
+          .react-datepicker__year-select {
+            -webkit-appearance: none;
+            padding: 3px 6px;
+            border: none;
+          }
+        }
+      }
+    }
+    .viewAllApp {
+      box-shadow: -6px 6px 10px rgba(0, 0, 0, 0.07);
+      padding-bottom: 15px;
+    }
     .newPatientSec {
       .appPatientList {
         .appPatientListCntr {
           margin: 0;
           padding: 0;
           list-style: none;
-          max-height: 60vh;
           overflow-y: auto;
           overflow-x: hidden;
+          height: calc(100vh - 407px);
           .appSection {
             border-top: 1px solid lighten($color-black, 80%);
             border-bottom: 1px solid lighten($color-black, 80%);
